--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -15,7 +15,7 @@ using HTML or markdown.  Do not modify this file above this line -->
    <p> She focuses on historical reclamation through her characters’ forces of imagination, rage, and so-called “madness”. Osbey disrupts conventional poetic forms in order to break with the false mythologies of white history.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition. Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms.
     Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <br>
-In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black people have transformed and redefined colonial languages through artistic tradition and expression, as well as the beauty and complexity of New Orleanian culture.
+In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition and expression, as well as the beauty and complexity of New Orleanian culture.
 
 </body>
 
