--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -8,6 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
+<head>
+<link rel='stylesheet' href='FF148Stylesheet'/>
+</head>
 <body>
   <img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png">
   <h1>Brenda Marie Osbey</h1>
