--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -33,7 +33,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 
 <hr>
-<h6>[1]: Davis, Thadious M. <i>Southscapes Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.
+<h6>[1]: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.
 </h6>
 <h6>[2]: Brenda Marie Osbey Interview, 9/24/2004 (FF0148). Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.</h6>
 <h6>[3]: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</h6>
