--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -8,31 +8,26 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<head>
-<link rel='stylesheet' href='FF148Stylesheet'/>
-</head>
   <img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png">
   <h1>Brenda Marie Osbey</h1>
-    <body><p><a href=https://www.osbeynola.com>Brenda Marie Osbey</a> is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “[Osbey’s] selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<sup>[1]</sup></p>
+    <body><p><a href=/"https://www.osbeynola.com">Brenda Marie Osbey</a> is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “[Osbey’s] selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<sup>[1]</sup></p>
     <p>She focuses on historical reclamation through her characters’ forces of imagination. Osbey disrupts conventional poetic forms in order to break with the false mythologies of white history.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition. Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
   <p>In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty and complexity of New Orleanian culture.<sup>[2]</sup></p>
-  <p><a href=https://cavecanempoets.org/poetstour/carmen-gillespie>Carmen Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
+  <p><a href=/"https://cavecanempoets.org/poetstour/carmen-gillespie">Carmen Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
   </body>
 <hr>
 <h3>More Information:</h3>
 <b>Interviews:</b>
-<body>
-  <ul><li><a href=https://fightandfiddle.com/issues/brenda-marie-osbey>Interview</a> with Lauren K. Alleyne. Alleyne and Osbey discuss the weight and force of language, how ways of telling history can elide, recover, or remake it, and what to read and why. Includes links to several poems, and video excerpts of the interview.</li></ul>
-<ul><li><a href=http://kalamu.com/neogriot/2013/10/16/interview-brenda-marie-osbey-the-poem-as-history>Interview</a> with Noam Scheindlin, discussing themes of <i>History, and Other Poems</i>. Includes excerpts from the poetry collection.</li></ul>
+  <ul><li><p><a href=/"https://fightandfiddle.com/issues/brenda-marie-osbey">Interview</a> with Lauren K. Alleyne. Alleyne and Osbey discuss the weight and force of language, how ways of telling history can elide, recover, or remake it, and what to read and why. Includes links to several poems, and video excerpts of the interview.</p></li></ul>
+<ul><li><p><a href=/"http://kalamu.com/neogriot/2013/10/16/interview-brenda-marie-osbey-the-poem-as-history">Interview</a> with Noam Scheindlin, discussing themes of <i>History, and Other Poems</i>. Includes excerpts from the poetry collection.</p></li></ul>
 <b>Poems:</b>
-<ul><li><a href=https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey>"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</li></ul>
-<ul><li><a href=https://poets.org/poem/contemplating-breasts-pauline-lumumba>"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</li></ul>
+<ul><li><p><a href=/"https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
+<ul><li><p><a href=/"https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><a href=https://www.jstor.org/stable/20077905>"Writing Home"</a>, by Brenda Marie Osbey.<sup>[3]</sup> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</li></ul>
-<ul><li><a href= https://www.jstor.org/stable/23208853>"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<sup>[4]</sup> Addresses misconceptions of Voodoo, and provides some historical background.</li></ul>
-<ul><li><a href=https://fightandfiddle.com/2021/01/31/osbey-essay>"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</li></ul>
-</body>
+<ul><li><p><a href=/"https://www.jstor.org/stable/20077905">"Writing Home"</a><sup>[3]</sup>, by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href=/"https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a><sup>[4]</sup>, by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href=/"https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
 <h6>[1]: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.
