--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -19,10 +19,10 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <p>In this interview, Reggie Young and Sharan Strange discuss the importance of place, the function of emotional reserve in her poetry, and her counternarratives of history.<sup>[2]</sup></p>
 <br>
-<p><a href="/https://www.reggiescottyoung.com/">Reggie Young</a> is a critic and a poet. He received his Ph.D. in creative writing at the University of Illinois. He has worked as a scholar and professor at Villanova University, LSU, Wheaton College, and the University of Louisiana. He has published critical works and poetry in <i>African American Review</i>, <i>Oxford American</i>, and <i>Chicago Review</i>, to name a few.</p>
+<p><a href="https://www.reggiescottyoung.com/">Reggie Young</a> is a critic and a poet. He received his Ph.D. in creative writing at the University of Illinois. He has worked as a scholar and professor at Villanova University, LSU, Wheaton College, and the University of Louisiana. He has published critical works and poetry in <i>African American Review</i>, <i>Oxford American</i>, and <i>Chicago Review</i>, to name a few.</p>
 <hr>
 <h3>More Information:</h3>
-<ul><li><p><a href="/https://www.jstor.org/stable/3299175">Interview</a> with Toi Derricotte. Strange and Derricotte discuss childhood, history, and spirituality in Strange's work.</p></ul></li>
+<ul><li><p><a href="https://www.jstor.org/stable/3299175">Interview</a> with Toi Derricotte. Strange and Derricotte discuss childhood, history, and spirituality in Strange's work.</p></ul></li>
 
 <hr>
 <h6>[1]: 
