--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -17,17 +17,18 @@ using HTML or markdown.  Do not modify this file above this line -->
     <p>She has many influences, but has especially benefited from the work of Yusef Komunyakaa and Toni Morrison, with their sensitivity to the musicality of language and their creative recovery of histories. She also credits musicians, visual artists, and filmmakers as influencing her work.</p>
     <p>In her career she has engaged heavily in the artistic community through <a href="/https://poets.org/text/brief-guide-dark-room-collective">The Darkroom Collective</a>, an organization which she co-founded, and her contributions to journals such as <i>Callaloo</i> and <i>American Poetry Review</i>. </p>
 <hr>
-<p>In this interview, Reggie Young and Sharan Strange discuss the importance of place, the function of emotional reserve in her poetry, and her counternarratives of history.<sup>[2]</sup></p>
+<p>In this interview, Reggie Young and Sharan Strange discuss the importance of place, the function of emotional reserve in her poetry, and her counternarratives of history.
 <br>
 <p><a href="https://www.reggiescottyoung.com/">Reggie Young</a> is a critic and a poet. He received his Ph.D. in creative writing at the University of Illinois. He has worked as a scholar and professor at Villanova University, LSU, Wheaton College, and the University of Louisiana. He has published critical works and poetry in <i>African American Review</i>, <i>Oxford American</i>, and <i>Chicago Review</i>, to name a few.</p>
 <hr>
 <h3>More Information:</h3>
 <ul><li><p><a href="https://www.jstor.org/stable/3299175">Interview</a> with Toi Derricotte. Strange and Derricotte discuss childhood, history, and spirituality in Strange's work.</p></ul></li>
 
-<hr>
 <h6>[1]: 
-  Strange, Sharan. "A Peotics of Empathy" in <i>Furious Flower : Seeding the Future of African American Poetry</i>. Edited by Joanne V. Gabbin and Lauren K. Alleyne. Evanston, Illinois: Triquarterly Books, Northwestern University Press, 2020.
+  Strange, Sharan. "A Poetics of Empathy" in <i>Furious Flower : Seeding the Future of African American Poetry</i>. Edited by Joanne V. Gabbin and Lauren K. Alleyne. Evanston, Illinois: Triquarterly Books, Northwestern University Press, 2020.
 </h6>
-<h6>[2]:
-  <i>Sharan Strange Interview, 09/25/2004(FF0137)</i>Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488. 
-  </h6>
+<hr>
+<br>
+  <h6><i>Sharan Strange Interview, 09/25/2004(FF0137)</i>Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.<h6>
+<hr>
+
