--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -15,7 +15,7 @@ using HTML or markdown.  Do not modify this file above this line -->
  <br>
 <p>She focuses on historical reclamation through her characters’ forces of imagination. Osbey disrupts conventional poetic forms in order to break with the false mythologies of white history.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition. Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
-  <p>In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty and complexity of New Orleanian culture.<sup>[2]</sup></p>
+  <p>In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty and complexity of New Orleanian culture.
   <p><a href="https://cavecanempoets.org/poetstour/carmen-gillespie">Carmen Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
 <hr>
 <h3>More Information:</h3>
@@ -26,14 +26,15 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a><sup>[3]</sup>, by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a><sup>[4]</sup>, by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a><sup>[2]</sup>, by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a><sup>[3]</sup>, by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
 <h6>[1]: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.
 </h6>
-<h6>[2]: Brenda Marie Osbey Interview, 9/24/2004 (FF0148). Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.</h6>
-<h6>[3]: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</h6>
-<h6>[4]: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” The Southern Literary Journal 43, no. 2 (2011): 1–11.</h6>
+<h6>[2]: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</h6>
+<h6>[3]: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” The Southern Literary Journal 43, no. 2 (2011): 1–11.</h6>
+<hr>
+<h6><i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.</h6>
   
