--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -13,7 +13,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <h1>Sharan Strange</h1>
 
 <p>Sharan Strange is a poet, essayist, teacher, and theorist. In interviews she has emphasized how the political climate affects her experience of everyday life. Especially in these times, she feels a sense of responsibility to communicate truth, in opposition to the propaganda of false national and historical narratives. In her essay <i>A Poetics of Empathy</i>, she says: ”in the context of African American poetry from past to future, a poetics of empathy corresponds to a poetics of resistance that confronts apathy and assault with the prerogative, practice, and pressure of humanity.”<sup>[1]</sup> Her poetry reflects this philosophy.</p>
-    <p>Often Strange’s poetry includes rich and haunting language capturing aspects of her childhood in the South. Contemplating various subjects including racist teachers, trauma, classmates, and girlhood, Strange weaves together beautiful lines out of complex, sorrowful encounters. In other poems, she constructs a deep sense of place, explores the significance of dreams, and speaks of combating suffering and oppression, past and present, through artistic resistance.</p>
+    <p>Often Stranges poetry includes rich and haunting language capturing aspects of her childhood in the South. Contemplating various subjects including racist teachers, classmates, and girlhood, Strange weaves together beautiful lines out of complex, sorrowful encounters. In other poems, she constructs a deep sense of place, explores the significance of dreams, and speaks of combating suffering and oppression, past and present, through artistic resistance.</p>
     <p>She has many influences, but has especially benefited from the work of Yusef Komunyakaa and Toni Morrison, with their sensitivity to the musicality of language and their visual genius. She also credits musicians, visual artists, choreographers, and filmmakers as influencing her work.</p>
     <p>In her career she has engaged in the artistic community through <a href="/https://poets.org/text/brief-guide-dark-room-collective">The Darkroom Collective</a>, an organization which she co-founded, and her contributions to journals such as <i>Callaloo</i> and <i>American Poetry Review</i>. Her writing has been presented in such places as the Institute of Contemporary Art in Boston, the Whitney Museum, and the Skylight Gallery in New York.</p>
 <hr>
