--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -16,7 +16,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>She has many influences, but has especially benefited from the work of Yusef Komunyakaa and Toni Morrison, with their sensitivity to the musicality of language and their visual genius. She also credits musicians, visual artists, choreographers, and filmmakers as influencing her work. 
 <p>In her career she has engaged in the artistic community through <a href="https://poets.org/text/brief-guide-dark-room-collective">The Darkroom Collective</a>, an organization which she co-founded, and her contributions to journals such as <i>Callaloo</i> and <i>American Poetry Review</i>. Her writing has been presented in such places as the Institute of Contemporary Art in Boston, the Whitney Museum, and the Skylight Gallery in New York.</p>
 <hr>
-<p>In this interview, Reggie Young and Sharan Strange discuss the importance of place, the function of emotional reserve in her poetry, and her counternarratives of history.</p>
+<p>In this interview, Reggie Young and Sharan Strange discuss the importance of place, the function of emotional reserve in her poetry, and her historical counternarratives.</p>
 <p><a href="https://www.reggiescottyoung.com/">Reggie Young</a> is a critic and a poet. He received his Ph.D. in creative writing at the University of Illinois. He has worked as a scholar and professor at Villanova University, LSU, Wheaton College, and the University of Louisiana. He has published critical works and poetry in <i>African American Review</i>, <i>Oxford American</i>, and <i>Chicago Review</i>, to name a few.</p>
 <hr>
 
