--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -11,7 +11,7 @@ using HTML or markdown.  Do not modify this file above this line -->
   
   <img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png">
   <h1>Brenda Marie Osbey</h1>
- <p>Brenda Marie Osbey is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<sup>[1]</sup></p>
+ <p>Brenda Marie Osbey is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1">[1]</a></p>
  <br>
 <p>She focuses on historical reclamation through her characters’ forces of imagination. Osbey disrupts conventional poetic forms in order to break with the false mythologies of white history.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition. Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
@@ -31,10 +31,10 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
-<h6>[1]: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.
-</h6>
+<p><a name="fn1">[1]</a>: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.</p>
 <h6>[2]: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</h6>
 <h6>[3]: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” The Southern Literary Journal 43, no. 2 (2011): 1–11.</h6>
 <hr>
-<h6><i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.</h6>
+<h3>Preferred Citation:</h3>
+<i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
   
