--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -35,6 +35,6 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p><a name="fn2">[2]</a>: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</p>
 <p><a name="fn3">[3]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” The Southern Literary Journal 43, no. 2 (2011): 1–11.</p>
 <hr>
-<b>Preferred Citation:</b>
+<h4>Preferred Citation:</h4>
 <i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
   
