--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -26,8 +26,8 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a><a href="#fn2">[2]</a></p>, by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a><a href="#fn3">[3]</a></p>, by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>,<a href="#fn2">[2]</a></p> by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>,<a href="#fn3">[3]</a></p> by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
@@ -35,6 +35,6 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p><a name="fn2">[2]</a>: Osbey, Brenda Marie. “Writing Home.” The Southern Literary Journal 40, no. 2 (2008): 19–41.</p>
 <p><a name="fn3">[3]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” The Southern Literary Journal 43, no. 2 (2011): 1–11.</p>
 <hr>
-<h4>Preferred Citation:</h4>
+<h4><b>Preferred Citation:</b></h4>
 <i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
   
