--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -26,8 +26,8 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>,<a href="#fn2">[2]</a> by Brenda Marie Osbey. An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>,<a href="#fn3">[3]</a> by Brenda Marie Osbey. Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>, by Brenda Marie Osbey.<a href="#fn2">[2]</a> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<a href="#fn3">[3]</a> Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
