--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -11,7 +11,7 @@ using HTML or markdown.  Do not modify this file above this line -->
   
   <img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png">
   <h1>Brenda Marie Osbey</h1>
- <p>Brenda Marie Osbey is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1">[1]</a></p>
+ <p>Brenda Marie Osbey is a poet, essayist, theorist, and historian who has published several books of poems, including <i>All Souls: Essential Poems</i>, <i>History and Other Poems</i>, and <i>Desperate Circumstance, Dangerous Woman</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1"><sup>[1]</sup></a></p>
  <br>
 <p>She focuses on historical reclamation through her characters’ forces of imagination. Osbey disrupts conventional poetic forms in order to break with the false mythologies of white history.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition. Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
@@ -26,8 +26,8 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>, by Brenda Marie Osbey.<a href="#fn2">[2]</a> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<a href="#fn3">[3]</a> Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>, by Brenda Marie Osbey.<a href="#fn2"><sup>[2]</sup></a> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<a href="#fn3"><sup>[3]</sup></a> Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 
 <hr>
