--- a/pages/ff010.md
+++ b/pages/ff010.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF010
+title: FF010_Furious Flower Poetry Center Overview Part 1, 6/20/2011
 manifest_name: ff010
 permalink: ff010
 external_manifest_url: 
