--- a/pages/ff019.md
+++ b/pages/ff019.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF019
+title: FF019: Rita Dove Interview, 9/24/2004
 manifest_name: ff019
 permalink: ff019
 external_manifest_url: 
