--- a/pages/ff031.md
+++ b/pages/ff031.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF031: African American Poetry and the Vernacular Matrix Part 3, 9/29/1994
+title: FF031_African American Poetry and the Vernacular Matrix Part 3, 9/29/1994
 manifest_name: ff031
 permalink: ff031
 external_manifest_url: 
