--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF137
+title: FF137_Sharan Strange Interview, 9/25/2004
 manifest_name: ff137
 permalink: ff137
 external_manifest_url: 
