--- a/pages/ff139.md
+++ b/pages/ff139.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF139
+title: FF139_Marilyn Nelson Interview, 9/24/2004
 manifest_name: ff139
 permalink: ff139
 external_manifest_url: 
