--- a/pages/ff140.md
+++ b/pages/ff140.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF140
+title: FF140_Velma Pollard Interview, 9/23/2004
 manifest_name: ff140
 permalink: ff140
 external_manifest_url: 
