--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF142
+title: FF142_Yusef Komunyakaa Interview, 9/24/2004
 manifest_name: ff142
 permalink: ff142
 external_manifest_url: 
