--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF143
+title: FF143_Sonia Sanchez Interview, 9/25/2004
 manifest_name: ff143
 permalink: ff143
 external_manifest_url: 
