--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF148
+title: FF148_Brenda Marie Osbey Interview, 9/24/2004
 manifest_name: ff148
 permalink: ff148
 external_manifest_url: 
