--- a/pages/ff149.md
+++ b/pages/ff149.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF149
+title: FF149_Askia M. Touré Interview, 9/24/2004
 manifest_name: ff149
 permalink: ff149
 external_manifest_url: 
