--- a/pages/ff153.md
+++ b/pages/ff153.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF153
+title: FF153_Joanne V. Gabbin Interview, 9/24/2004
 manifest_name: ff153
 permalink: ff153
 external_manifest_url: 
