--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -11,7 +11,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <img src="https://furiousflower.org/wp-content/uploads/2019/04/sharanstrange4.jpg">
 <h1>Sharan Strange</h1>
-<p>Sharan Strange is a poet, essayist, teacher, and theorist. In interviews she has emphasized how the political climate affects her experience of everyday life. Especially in these times, she feels a sense of responsibility to communicate truth, in opposition to the propaganda of false national and historical narratives. In her essay <i>A Poetics of Empathy</i>, she says: ”in the context of African American poetry from past to future, a poetics of empathy corresponds to a poetics of resistance that confronts apathy and assault with the prerogative, practice, and pressure of humanity.”<sup>[1]</sup> Her poetry reflects this philosophy.</p>
+<p>Sharan Strange is a poet, essayist, teacher, and theorist. In interviews she has emphasized how the political climate affects her experience of everyday life. Especially in these times, she feels a sense of responsibility to communicate truth, in opposition to the propaganda of false national and historical narratives. In her essay <i>A Poetics of Empathy</i>, she says: ”in the context of African American poetry from past to future, a poetics of empathy corresponds to a poetics of resistance that confronts apathy and assault with the prerogative, practice, and pressure of humanity.”<a href=#fn1><sup>[1]</sup></a> Her poetry reflects this philosophy.</p>
 <p>Often Strange's poetry includes rich and haunting language capturing aspects of her childhood in the South. Contemplating various subjects including racist teachers, classmates, and girlhood, Strange weaves together beautiful lines out of complex, sorrowful encounters. In other poems, she constructs a deep sense of place, explores the significance of dreams, and speaks of combating suffering and oppression, past and present, through artistic resistance.</p>
 <p>She has many influences, but has especially benefited from the work of Yusef Komunyakaa and Toni Morrison, with their sensitivity to the musicality of language and their visual genius. She also credits musicians, visual artists, choreographers, and filmmakers as influencing her work. 
 <p>In her career she has engaged in the artistic community through <a href="https://poets.org/text/brief-guide-dark-room-collective">The Darkroom Collective</a>, an organization which she co-founded, and her contributions to journals such as <i>Callaloo</i> and <i>American Poetry Review</i>. Her writing has been presented in such places as the Institute of Contemporary Art in Boston, the Whitney Museum, and the Skylight Gallery in New York.</p>
@@ -22,22 +22,22 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <h3>More Information:</h3>
 <b>Interviews and Essays:</b>
-    <ul><li><p><a href="https://www.jstor.org/stable/3299175">Interview</a><sup>[2]</sup> with Toi Derricotte. Strange and Derricotte discuss childhood, history, and spirituality in Strange's work.</p></li></ul>
+    <ul><li><p><a href="https://www.jstor.org/stable/3299175">Interview</a><a href="#fn2"><sup>[2]</sup></a> with Toi Derricotte. Strange and Derricotte discuss childhood, history, and spirituality in Strange's work.</p></li></ul>
     <ul><li><p><a href="https://www.theauburnavenue.com/sharan-strange-interview"><i>Auburn Avenue</i></a> interview, discussing <i>The Darkroom Collective</i> and Strange's take on the literary landscape of 2017.</p></li></ul>
-    <ul><li><p><a href="https://www.jstor.org/stable/25426987">"The Darkroom Collective and Post-Soul Poetics"</a><sup>[4]</sup>, an essay written by Brian Reed. Provides a general history and restrospective of the collective, including focused discussion of the work of Strange, Thomas Sayers Ellis, Kevin Young, and others.</p></li></ul>
-     <ul><li><p><a href="https://www.jstor.org/stable/3300489">"Threads"</a><sup>[3]</sup>, an essay by Sharan Strange. Addresses the malignant persistence of the confederate flag, white supremacy, and white privilege, as well as Strange's complicted relationship with the South.</p></li></ul>
+    <ul><li><p><a href="https://www.jstor.org/stable/25426987">"The Darkroom Collective and Post-Soul Poetics"</a><a href="#fn3"><sup>[3]</sup></a>, an essay written by Brian Reed. Provides a general history and restrospective of the collective, including focused discussion of the work of Strange, Thomas Sayers Ellis, Kevin Young, and others.</p></li></ul>
+     <ul><li><p><a href="https://www.jstor.org/stable/3300489">"Threads"</a><a href="#fn4"><sup>[4]</sup></a>, an essay by Sharan Strange. Addresses the malignant persistence of the confederate flag, white supremacy, and white privilege, as well as Strange's complicted relationship with the South.</p></li></ul>
 <b>Poems:</b>
     <ul><li><p><a href="https://furiousflower.org/sharan-strange/">Furious Flower Archive:</a> Includes a brief bio, annotated text, and videos of Strange reading her poems "Offering" and "Barbershop Ritual".</p></li></ul>
     <ul><li><p><a href="http://washingtonart.com/beltway/strange.html"><i>Beltway Poetry Quarterly</i>:</a> Includes several of Strange's poems.</p></li></ul>
     <ul><li><p><a href="https://www.theartsection.com/sharan-strange"><i>The Art Section</i>:</a> Displays two of Strange's ekphrastic poems alongside the Romare Bearden paintings that were their inspiration. Also includes audio and video of Strange reading the poems.</p></li></ul>
 
 <hr>
-    <h6><b>[1]:</b> 
+    <h6><a name="fn1">[1]</a>: 
   Strange, Sharan. "A Poetics of Empathy" in <i>Furious Flower : Seeding the Future of African American Poetry</i>. Edited by Joanne V. Gabbin and Lauren K. Alleyne. Evanston, Illinois: Triquarterly Books, Northwestern University Press, 2020.
 </h6>
-    <h6><b>[2]:</b>Derricotte, Toi, and Sharan Strange. “An Interview with Sharan Strange.” <i>Callaloo</i> 19, no. 2 (1996): 291–98.</h6>
-    <h6><b>[3]:</b> Strange, Sharan. “Threads.” <i>Callaloo</i> 24, no. 1 (2001): 176–80.</h6>
-    <h6><b>[4]:</b> Reed, Brian. “The Dark Room Collective and Post-Soul Poetics.” <i>African American Review</i> 41, no. 4 (2007): 727–47.</h6>
+    <h6><a name="fn2">[2]</a>: Derricotte, Toi, and Sharan Strange. “An Interview with Sharan Strange.” <i>Callaloo</i> 19, no. 2 (1996): 291–98.</h6>
+    <h6><a name="fn3">[3]</a>: Reed, Brian. “The Dark Room Collective and Post-Soul Poetics.” <i>African American Review</i> 41, no. 4 (2007): 727–47.</h6>
+    <h6><a name="fn4">[4]</a>: Strange, Sharan. “Threads.” <i>Callaloo</i> 24, no. 1 (2001): 176–80.</h6>
 <hr>
 <br>
   <h6><i>Sharan Strange Interview, 09/25/2004(FF0137)</i>Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.<h6>
