--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -40,6 +40,7 @@ using HTML or markdown.  Do not modify this file above this line -->
     <h6><a name="fn4">[4]</a>: Strange, Sharan. “Threads.” <i>Callaloo</i> 24, no. 1 (2001): 176–80.</h6>
 <hr>
 <br>
-  <h6><i>Sharan Strange Interview, 09/25/2004(FF0137)</i>Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.<h6>
+<h3>Preferred Citation:</h3>
+  <i>Sharan Strange Interview, 09/25/2004(FF0137)</i>Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.
 <hr>
 
