--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -41,6 +41,6 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <br>
 <h3>Preferred Citation:</h3>
-  <i>Sharan Strange Interview, 09/25/2004(FF0137)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.
+  <i>Sharan Strange Interview, 09/25/2004(FF0137)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
 <hr>
 
