--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -29,15 +29,15 @@ using HTML or markdown.  Do not modify this file above this line -->
 <b>Poems:</b>
     <ul><li><p><a href="https://furiousflower.org/sharan-strange/">Furious Flower Archive:</a> Includes a brief bio, annotated text, and videos of Strange reading her poems "Offering" and "Barbershop Ritual".</p></li></ul>
     <ul><li><p><a href="http://washingtonart.com/beltway/strange.html"><i>Beltway Poetry Quarterly</i>:</a> Includes several of Strange's poems.</p></li></ul>
-    <ul><li><p><a href="https://www.theartsection.com/sharan-strange"><i>The Art Section</i>:</a> Displays two of Strange's ekphrastic poems alongside the Romare Bearden paintings that were their inspiration. Also includes audio and video of Strange reading the poems.</p></li></ul>
+    <ul><li><p><a href="https://www.theartsection.com/sharan-strange"><i>The Art Section</i>:</a> Displays two of Strange's ekphrastic poems alongside the Romare Bearden paintings that inspired them. Also includes audio and video of Strange reading the poems.</p></li></ul>
 
 <hr>
-    <h6><a name="fn1">[1]</a>: 
+    <a name="fn1">[1]</a>: 
   Strange, Sharan. "A Poetics of Empathy" in <i>Furious Flower : Seeding the Future of African American Poetry</i>. Edited by Joanne V. Gabbin and Lauren K. Alleyne. Evanston, Illinois: Triquarterly Books, Northwestern University Press, 2020.
-</h6>
-    <h6><a name="fn2">[2]</a>: Derricotte, Toi, and Sharan Strange. “An Interview with Sharan Strange.” <i>Callaloo</i> 19, no. 2 (1996): 291–98.</h6>
-    <h6><a name="fn3">[3]</a>: Reed, Brian. “The Dark Room Collective and Post-Soul Poetics.” <i>African American Review</i> 41, no. 4 (2007): 727–47.</h6>
-    <h6><a name="fn4">[4]</a>: Strange, Sharan. “Threads.” <i>Callaloo</i> 24, no. 1 (2001): 176–80.</h6>
+
+  <p><a name="fn2">[2]</a>: Derricotte, Toi, and Sharan Strange. “An Interview with Sharan Strange.” <i>Callaloo</i> 19, no. 2 (1996): 291–98.</p>
+  <p><a name="fn3">[3]</a>: Reed, Brian. “The Dark Room Collective and Post-Soul Poetics.” <i>African American Review</i> 41, no. 4 (2007): 727–47.</p>
+  <p><a name="fn4">[4]</a>: Strange, Sharan. “Threads.” <i>Callaloo</i> 24, no. 1 (2001): 176–80.</p>
 <hr>
 <br>
 <h3>Preferred Citation:</h3>
